--- a/composer.json
+++ b/composer.json
@@ -32,17 +32,17 @@
     ],
     "require": {
         "php": "^7.1",
-        "illuminate/cache": "5.5.*|5.6.*|5.7.*|5.8.*|6.0.*",
-        "illuminate/contracts": "5.5.*|5.6.*|5.7.*|5.8.*|6.0.*",
-        "illuminate/cookie": "5.5.*|5.6.*|5.7.*|5.8.*|6.0.*",
-        "illuminate/database": "5.5.*|5.6.*|5.7.*|5.8.*|6.0.*",
-        "illuminate/http": "5.5.*|5.6.*|5.7.*|5.8.*|6.0.*",
-        "illuminate/support": "5.5.*|5.6.*|5.7.*|5.8.*|6.0.*",
+        "illuminate/cache": "5.5.*|5.6.*|5.7.*|5.8.*|^6.*",
+        "illuminate/contracts": "5.5.*|5.6.*|5.7.*|5.8.*|^6.*",
+        "illuminate/cookie": "5.5.*|5.6.*|5.7.*|5.8.*|^6.*",
+        "illuminate/database": "5.5.*|5.6.*|5.7.*|5.8.*|^6.*",
+        "illuminate/http": "5.5.*|5.6.*|5.7.*|5.8.*|^6.*",
+        "illuminate/support": "5.5.*|5.6.*|5.7.*|5.8.*|^6.*",
         "jaybizzle/crawler-detect": "^1.0",
         "nesbot/carbon": "^1.22|^2.0"
     },
     "require-dev": {
-        "illuminate/config": "5.5.*|5.6.*|5.7.*|5.8.*|6.0.*",
+        "illuminate/config": "5.5.*|5.6.*|5.7.*|5.8.*|^6.*",
         "mockery/mockery": "^1.0",
         "orchestra/database": "~3.5.0|~3.6.0|~3.7.0|^4.0",
         "orchestra/testbench": "~3.5.0|~3.6.0|~3.7.0|^4.0",
